crates/tesshir/tests/fixtures/check/enum_definition_errors.tess
enum Bad: u8 {
    A = 1,
    B = 1,
    C = 256,
    Payload(i32) = 2,
    Struct { x: i32, x: bool },
}
